Added support for setting the SteamId of the mocked contract through appsettings.json

--- a/Src/HM5.Server/appsettings.json
+++ b/Src/HM5.Server/appsettings.json
@@ -1,8 +1,19 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:80"
+      },
+      "Https": {
+        "Url": "https://localhost:443"
+      }
+    }
+  },
   "Options": {
     "FixAddMetricsContentType": true,
     "EnableRequestLogging": true,
     "EnableRequestBodyLogging": true,
-    "EnableResponseBodyLogging": true
+    "EnableResponseBodyLogging": true,
+    "MockedContractSteamId": "76561198161220058"
   }
 }
