Added support for setting the WalletAmount through appsettings.json Removed the need for a HTTPS certificate

--- a/Src/HM5.Server/appsettings.json
+++ b/Src/HM5.Server/appsettings.json
@@ -3,9 +3,6 @@
     "Endpoints": {
       "Http": {
         "Url": "http://localhost:80"
-      },
-      "Https": {
-        "Url": "https://localhost:443"
       }
     }
   },
@@ -14,6 +11,7 @@
     "EnableRequestLogging": true,
     "EnableRequestBodyLogging": true,
     "EnableResponseBodyLogging": true,
-    "MockedContractSteamId": "76561198161220058"
+    "MockedContractSteamId": "76561198161220058",
+    "WalletAmount": 1337
   }
 }
