Added support for custom contracts Added UI to manage and share custom contracts

--- a/Src/HM5.Server/HM5.Server.csproj
+++ b/Src/HM5.Server/HM5.Server.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Logs\" />
+    <Content Remove="Contracts\**" />
+    <None Remove="Logs\**" />
   </ItemGroup>
 
 </Project>
