--- a/Src/HM5.Server/appsettings.json
+++ b/Src/HM5.Server/appsettings.json
@@ -9,9 +9,10 @@
   "Options": {
     "FixAddMetricsContentType": true,
     "EnableRequestLogging": true,
-    "EnableRequestBodyLogging": true,
-    "EnableResponseBodyLogging": true,
+    "EnableRequestBodyLogging": false,
+    "EnableResponseBodyLogging": false,
     "MockedContractSteamId": "76561198161220058",
-    "WalletAmount": 1337
+    "WalletAmount": 1337,
+    "UseCustomContracts": false
   }
 }
