--- a/Src/HM5.Hook/hook.ini
+++ b/Src/HM5.Hook/hook.ini
@@ -1,9 +1,10 @@
 [options]
 enabled=true
 log=true
-
+debugger=false
 ;Can be set to either hm5 or sniper
 game=hm5
+steam=false
 
 [hm5]
 webserviceurl=http://localhost:40147/hm5
@@ -11,3 +12,7 @@ skiplauncher=true
 
 [sniper]
 webserviceurl=http://localhost:40147/sniper
+
+[steam]
+enableauthentication=false
+disablenameresolving=false
