--- a/Src/HM5.Hook/MH5.Hook.vcxproj.filters
+++ b/Src/HM5.Hook/MH5.Hook.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="hook_sniper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hook_steam.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hook.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hook_absolution.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hook_steam.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
